objects/ASI_CRM_Visual_Application_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Bleeding__c</fullName>
        <inlineHelpText>的的的的的的的的的的的的的的的的
的的的的的的的的的的的的的的的的
的的的的的的的的的的的的的的的
的的的的的的的的的的的的的的的</inlineHelpText>
        <label>Bleeding(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN FOC Brand</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Brand__c.ASI_CRM_CN_Competitor__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Visual Application Items</relationshipLabel>
        <relationshipName>ASI_CRM_Visual_Application_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lightbox_Name__c</fullName>
        <label>Lightbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Special_Layout_Requests__c</fullName>
        <label>Special Layout Requests?</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visible_Height__c</fullName>
        <label>Visible Height(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visible_Width__c</fullName>
        <label>Visible Width(mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Visual_Application__c</fullName>
        <label>Visual Application</label>
        <referenceTo>ASI_CRM_Visual_Application__c</referenceTo>
        <relationshipLabel>Visual Application Items</relationshipLabel>
        <relationshipName>Visual_Application_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Visual Application Item</label>
    <nameField>
        <displayFormat>VISL-{000000}</displayFormat>
        <label>Visual Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Application Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>